--- a/libraries.gradle
+++ b/libraries.gradle
@@ -3,6 +3,7 @@ ext {
             spring: [
                     "org.springframework.boot:spring-boot-starter-web",
                     "org.springframework.boot:spring-boot-starter-actuator",
+                    "org.springframework.boot:spring-boot-starter-web:2.0.0.M6",
                     "de.codecentric:spring-boot-starter-admin-client:1.1.2",
                     "io.springfox:springfox-swagger2:2.7.0",
                     "io.springfox:springfox-swagger-ui:2.7.0"
